se agrega descargar reportes para PDA

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -57,6 +57,9 @@
               </div>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'inventario:informe' %}">Informes</a>
+              </li> 
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'inventario:log' %}">Cerrar Sesión</a>
             </li>           
         </div>
