se agrega descargar informe para modelo telefono

--- a/templates/informe/informe.html
+++ b/templates/informe/informe.html
@@ -26,7 +26,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Informe de telefonía</h5>
                         <p class="card-text">Este informe contiene todo el contenido de la información de los teléfonos ingresados al inventario.</p>
-                        <a href="#" class="btn text-white btn-outline-primary">Descargar informe</a>
+                        <a href="{% url 'telefono:telefono_reporte' %}" class="btn text-white btn-outline-primary">Descargar informe</a>
                     </div>
                 </div>
             </div>
