se agrega filtro para buscar equipos

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -25,7 +25,8 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'equipos:equipo_crear' %}">Agregar Equipamiento</a>
-                    <a class="dropdown-item" href="{% url 'equipos:equipo_listar' %}">Buscar Equipamiento</a>
+                    <a class="dropdown-item" href="{% url 'equipos:equipo_listar' %}">Modificar Equipamiento</a>
+                    <a class="dropdown-item" href="{% url 'equipos:equipo_buscar' %}">Buscar Equipamiento</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,7 +34,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'Asignacion:asignacion_crear' %}">Nueva asignación</a>
-                    <a class="dropdown-item" href="{% url 'Asignacion:asignacion_listar' %}">Buscar usuario</a>
+                    <a class="dropdown-item" href="{% url 'Asignacion:asignacion_listar' %}">Modificar usuario</a>
                     
                   </div>
                 </li>
@@ -43,7 +44,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="{% url 'telefono:telefono_crear' %}">Agregar Telefonos</a>
-                  <a class="dropdown-item" href="{% url 'telefono:telefono_listar' %}">Buscar telefonos</a>
+                  <a class="dropdown-item" href="{% url 'telefono:telefono_listar' %}">Modificar telefonos</a>
                   
                 </div>
               </li>
@@ -53,7 +54,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{% url 'pda:pda_crear' %}">Agregar PDA</a>
-                <a class="dropdown-item" href="{% url 'pda:pda_listar' %}">Buscar PDA</a>
+                <a class="dropdown-item" href="{% url 'pda:pda_listar' %}">Modificar PDA</a>
               </div>
             </li>
             <li class="nav-item">
