--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -34,8 +34,8 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'Asignacion:asignacion_crear' %}">Nueva asignación</a>
-                    <a class="dropdown-item" href="{% url 'Asignacion:asignacion_listar' %}">Modificar usuario</a>
-                    
+                    <a class="dropdown-item" href="{% url 'Asignacion:asignacion_listar' %}">Modificar asignación</a>
+                    <a class="dropdown-item" href="{% url 'Asignacion:asignacion_buscar' %}">Buscar asignación</a>
                   </div>
                 </li>
             <li class="nav-item dropdown">
