--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -55,6 +55,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{% url 'pda:pda_crear' %}">Agregar PDA</a>
                 <a class="dropdown-item" href="{% url 'pda:pda_listar' %}">Modificar PDA</a>
+                <a class="dropdown-item" href="{% url 'pda:pda_buscar' %}">Buscar PDA</a>
               </div>
             </li>
             <li class="nav-item">
