se agregan los ultimos filtros para telefono y pda

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -45,6 +45,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="{% url 'telefono:telefono_crear' %}">Agregar Telefonos</a>
                   <a class="dropdown-item" href="{% url 'telefono:telefono_listar' %}">Modificar telefonos</a>
+                  <a class="dropdown-item" href="{% url 'telefono:telefono_buscar' %}">Buscar telefonos</a>
                   
                 </div>
               </li>
